[project]
name = "currency-exchange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.2.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.3",
]

[tool.mypy]

python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
]
target-version = "py313" # для Python 3.13
[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
[tool.ruff.format]
quote-style = "single"
